--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@
 	--border: rgba(100, 100, 100, 0.5);
 	--yellow: rgb(209, 206, 4);
 	--navigation-width: 3rem;
+	--background: rgba(0, 0, 0, 0.9)
 }
 
 * {
@@ -16,7 +17,7 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	background-color: rgba(0, 0, 0, 0.9);
+	background-color: var(--background);
 	color: var(--white);
 }
 
@@ -82,6 +83,7 @@ p {
 .fas, .fab {
 	color: var(--less-white);
 	font-size: 2rem;
+	vertical-align: middle;
 }
 
 .navigation {
@@ -194,6 +196,20 @@ p {
 
 .setting > .setting-header {
 	margin-bottom: 0.5rem;
+}
+
+.settings-save {
+	margin: 2rem -2rem 0 0;
+	direction: rtl;
+}
+
+#settings-status {
+	display: inline;
+	margin-right: 1rem;
+}
+
+.fa-check {
+	color: green;
 }
 
 .flex-col {
