--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 		<title>swapbot</title>
 		<link href = '{{ url_for("static", filename = "css/styles.css") }}' rel = 'stylesheet' />
 		<link href = '{{ url_for("static", filename = "css/all.min.css") }}' rel = 'stylesheet' />
+		<link href = '{{ url_for("static", filename = "css/spinner.css") }}' rel = 'stylesheet' />
 		<script src = '{{ url_for("static", filename = "js.js") }}'></script>
 	</head>
 	<body>
