--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>swapbot</title>
+		<title>@burnttoaster bot</title>
 		<link href = '{{ url_for("static", filename = "css/styles.css") }}' rel = 'stylesheet' />
 		<link href = '{{ url_for("static", filename = "css/all.min.css") }}' rel = 'stylesheet' />
-		<link href = '{{ url_for("static", filename = "css/spinner.css") }}' rel = 'stylesheet' />
 		<script src = '{{ url_for("static", filename = "js.js") }}'></script>
 	</head>
 	<body>
