Removed another debug line

--- a/templates/components/swap.html
+++ b/templates/components/swap.html
@@ -16,7 +16,7 @@
 				<button id = 'submit' type = 'submit' class = 'contained' disabled>SWAP</button>
 				<button id = 'check' type = 'submit' class = 'emphasis' disabled>CHECK</button>
 			</div>
-			<div id = 'swap-status'>sample text</div>
+			<div id = 'swap-status hidden'></div>
 		</form>
 	</div>
 	<script type = 'text/javascript'>
