--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>@burnttoaster bot</title>
+		<title>burntbot</title>
 		<link href = '{{ url_for("static", filename = "css/styles.css") }}' rel = 'stylesheet' />
 		<link href = '{{ url_for("static", filename = "css/all.min.css") }}' rel = 'stylesheet' />
 		<script src = '{{ url_for("static", filename = "js.js") }}'></script>
