--- a/templates/components/update.html
+++ b/templates/components/update.html
@@ -1,5 +1,5 @@
-{% macro update_notification() %}
+{% macro update_notification(new) %}
 	<div class = 'rounded update center'>
-		&#127881 Hey, there's a new update! Download it at <a href = 'https://github.com/itslupus/swappong' target = '_blank'>https://github.com/itslupus/swappong</a> &#127881
+		&#127881 Hey, there's a new update (v{{ new }})! Download it at <a href = 'https://github.com/itslupus/burntbot' target = '_blank'>https://github.com/itslupus/burntbot</a> &#127881
 	</div>
 {% endmacro %}
