Changed old URL

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
 			<a href = '/blacklist' title = 'Blacklist'><i class="fas fa-user-slash"></i></a>
 			<a href = '/settings' title = 'Settings'><i class="fas fa-cog"></i></a>
 			<div class = 'stick-bottom flex-col'>
-				<a href = 'https://github.com/itslupus/shakepong' title = 'Github' target = '_blank'><i class="fab fa-github"></i></a>
+				<a href = 'https://github.com/itslupus/burntbot' title = 'Github' target = '_blank'><i class="fab fa-github"></i></a>
 				<p>v{{ data['version'] }}</p>
 			</div>
 		</div>
