--- a/templates/settings.html
+++ b/templates/settings.html
@@ -37,6 +37,13 @@
 					<input id = 'setting-auto-shake' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['shaking_sats_enabled'] else '' }}>
 				</div>
 			</div>
+			<div class = 'setting'>
+				<div class = 'setting-header'>Bot Heart Beat</div>
+				<div class = 'flex-row'>
+					<p>Enable the bot to broadcast whether it is alive or not</p>
+					<input id = 'setting-heart-beat' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat'] else '' }}>
+				</div>
+			</div>
 		</div>
 		<div class = 'settings-save'>
 			<button id = 'submit' type = 'submit' class = 'contained'>SAVE</button>
@@ -58,10 +65,7 @@
 		}
 
 		function save(event) {
-			let note = document.getElementById('setting-note').value;
 			let poll_rate = document.getElementById('setting-poll-rate').value;
-			let return_check = document.getElementById('setting-auto-check').checked;
-			let shaking_sats = document.getElementById('setting-auto-shake').checked;
 
 			if (poll_rate < 4) {
 				
@@ -72,10 +76,11 @@
 					method: 'PATCH',
 					headers: {'Content-Type': 'application/json'},
 					body: JSON.stringify({
-						note: note,
+						note: document.getElementById('setting-note').value,
 						poll_rate: poll_rate,
-						return_check: return_check,
-						shaking_sats_enabled: shaking_sats
+						return_check: document.getElementById('setting-auto-check').checked,
+						shaking_sats_enabled: document.getElementById('setting-auto-shake').checked,
+						heart_beat: document.getElementById('setting-heart-beat').checked
 					})
 				})
 				.then(async (data) => {
