Added extra data and local version

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 			<div class = 'setting'>
-				<div class = 'setting-header'><a href = 'https://swap.labrie.ca' target = '_blank'>@domi167's Swapper Database</a></div>
+				<div class = 'setting-header'><a href = 'https://swap.labrie.ca' target = '_blank'>Community Swapper Database</a></div>
 				<div class = 'flex-row'>
 					<p>Prevent send back to scammers and those that don't send back</p>
 					<input id = 'setting-auto-check' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['return_check'] else '' }}>
@@ -38,10 +38,17 @@
 				</div>
 			</div>
 			<div class = 'setting'>
-				<div class = 'setting-header'>Bot Heart Beat</div>
+				<div class = 'setting-header'><a href = 'https://swap.labrie.ca' target = '_blank'>Bot Heart Beat</a></div>
 				<div class = 'flex-row'>
 					<p>Enable the bot to broadcast whether it is alive or not</p>
 					<input id = 'setting-heart-beat' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat'] else '' }}>
+				</div>
+			</div>
+			<div class = 'setting'>
+				<div class = 'setting-header'>Bot Heart Beat (extra)</div>
+				<div class = 'flex-row'>
+					<p>Enable extra information to be sent when performing heart beat (points, position, etc)</p>
+					<input id = 'setting-heart-beat-extra' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat_extra'] else '' }}>
 				</div>
 			</div>
 		</div>
@@ -80,7 +87,8 @@
 						poll_rate: poll_rate,
 						return_check: document.getElementById('setting-auto-check').checked,
 						shaking_sats_enabled: document.getElementById('setting-auto-shake').checked,
-						heart_beat: document.getElementById('setting-heart-beat').checked
+						heart_beat: document.getElementById('setting-heart-beat').checked,
+						heart_beat_extra: document.getElementById('setting-heart-beat-extra').checked
 					})
 				})
 				.then(async (data) => {
