--- a/templates/settings.html
+++ b/templates/settings.html
@@ -40,15 +40,19 @@
 			<div class = 'setting'>
 				<div class = 'setting-header'><a href = 'https://swap.labrie.ca' target = '_blank'>Bot Heart Beat</a></div>
 				<div class = 'flex-row'>
-					<p>Enable the bot to broadcast whether it is alive or not</p>
+					<p>Enable the bot to report to @domi167's bot registry, leaving the below section blank will hide waitlist position, points and swaps</p>
 					<input id = 'setting-heart-beat' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat'] else '' }}>
 				</div>
-			</div>
-			<div class = 'setting'>
-				<div class = 'setting-header'>Bot Heart Beat (extra)</div>
-				<div class = 'flex-row'>
-					<p>Enable extra information to be sent when performing heart beat (points, position, etc)</p>
-					<input id = 'setting-heart-beat-extra' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat_extra'] else '' }}>
+				<div class = 'rounded setting-extra'>
+					<div>Enabling any of these options will also report waitlist position!</div>
+					<div class = 'flex-row'>
+						<p>Report waitlist points</p>
+						<input id = 'setting-heart-beat-points' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat_points'] else '' }}>
+					</div>
+					<div class = 'flex-row'>
+						<p>Report total swaps completed today</p>
+						<input id = 'setting-heart-beat-swaps' type = 'checkbox' autocomplete = 'off' {{ 'checked' if data['heart_beat_swaps'] else '' }}>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -72,11 +76,12 @@
 		}
 
 		function save(event) {
-			let poll_rate = document.getElementById('setting-poll-rate').value;
+			let poll_rate = document.getElementById('setting-poll-rate');
 
-			if (poll_rate < 4) {
-				
+			if (poll_rate.value < 4) {
+				poll_rate.classList.add('border-red');
 			} else {
+				poll_rate.classList.remove('border-red');
 				toggle_settings_save(false);
 
 				fetch('/settings/', {
@@ -84,15 +89,17 @@
 					headers: {'Content-Type': 'application/json'},
 					body: JSON.stringify({
 						note: document.getElementById('setting-note').value,
-						poll_rate: poll_rate,
+						poll_rate: poll_rate.value,
 						return_check: document.getElementById('setting-auto-check').checked,
 						shaking_sats_enabled: document.getElementById('setting-auto-shake').checked,
 						heart_beat: document.getElementById('setting-heart-beat').checked,
-						heart_beat_extra: document.getElementById('setting-heart-beat-extra').checked
+						heart_beat_points: document.getElementById('setting-heart-beat-points').checked,
+						heart_beat_swaps: document.getElementById('setting-heart-beat-swaps').checked
 					})
 				})
 				.then(async (data) => {
 					let status = document.getElementById('settings-status');
+					status.innerHTML = '';
 
 					if (await data.ok) {
 						set_checkmark(status);
